--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
         <nav class="hat">
             <a href="{{ url_for('index') }}">Все таблицы</a>
             <a href="{{ url_for('queue') }}">Создать таблицу</a>
+            <button id="registerButton">Зарегистрироваться</button>
+            <button id="loginButton">Войти</button>
         </nav>
     </header>
     {% block body %}{% endblock %}
