--- a/templates/login.html
+++ b/templates/login.html
@@ -5,5 +5,14 @@ Login
 {% endblock %}
 
 {% block body %}
-Войти
+<h2>Login</h2>
+    <form action="/login" method="POST">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+
+        <button type="submit">Login</button>
+    </form>  
 {% endblock %}
