--- a/templates/register.html
+++ b/templates/register.html
@@ -5,5 +5,17 @@ Register
 {% endblock %}
 
 {% block body %}
-Зарегистрироваться
+<h2>Register</h2>
+    <form action="/register" method="POST">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <button type="submit">Register</button>
+    </form
 {% endblock %}
