--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,34 @@ All tables
 {% block body %}
 
 <h1>Таблицы очередей</h1>
-<div class="big_create">
-    <a class="create_new_table" href="{{ url_for('queue') }}">Создать новую таблицу</a>
+<!--
+{% if current_user.is_admin%}
+    <div class="big_create">
+        <a class="create_new_table" href="{{ url_for('queue') }}">Создать новую таблицу</a>
+    </div>
+{% endif %}
+-->
+
+<div class="search_big">
+    <div class="search">
+        <form action="{{ url_for('search') }}" method="GET">
+            <input type="text" name="searching_table" placeholder="Введите наименование таблицы">
+            <button type="submit">Поиск</button>
+        </form>
+    </div>
 </div>
+
+{% if results %}
+    <ul>
+        {% for element in results %}
+            <li>
+                <a href="{{ url_for('make', table_id=element.id) }}"> {{ element.name }} </a>
+            </li>
+        {% endfor %}
+    </ul>
+{% elif searching_table %}
+    <p>Ничего не найдено.</p>
+{% endif %}
 
 <div class="table_scroll">
     <ul>
@@ -17,7 +42,9 @@ All tables
             <li>
                 <a class="table_name" href="{{ url_for('make', table_id=table.id) }}">{{ table.name }}</a>
                 <form method="POST" action="{{ url_for('delete_table', table_id=table.id) }}" style="display:inline;">
-                    <button class="delete_table" type="submit" onclick="return confirm('Вы уверены, что хотите удалить эту таблицу?');">Удалить таблицу</button>
+                    {% if current_user.is_admin %}
+                        <button class="delete_table" type="submit" onclick="return confirm('Вы уверены, что хотите удалить эту таблицу?');">Удалить таблицу</button>
+                    {% endif %}
                 </form>
             </li>
         {% endfor %}
