--- a/templates/login.html
+++ b/templates/login.html
@@ -5,14 +5,18 @@ Login
 {% endblock %}
 
 {% block body %}
-<h2>Login</h2>
-    <form action="/login" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+<div class="big_register">
+    <div class="register">
+        <h2>Войти</h2>
+            <form action="/login" method="POST">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
 
-        <button type="submit">Login</button>
-    </form>  
+                <button type="submit">Login</button>
+            </form>  
+    </div>
+</div>
 {% endblock %}
