--- a/templates/queue.html
+++ b/templates/queue.html
@@ -9,7 +9,7 @@ Create table
     <div class="container1">
         <form method="POST">
             <div class="input_group">
-                <label class="create_table_name" for="table_name">Table Name:</label>
+                <label class="create_table_name" for="table_name">Наименование таблицы:</label>
                 <input type="text" id="table_name" name="table_name" required>
                 <button type="submit">Create</button>
             </div>
