--- a/templates/register.html
+++ b/templates/register.html
@@ -5,17 +5,22 @@ Register
 {% endblock %}
 
 {% block body %}
-<h2>Register</h2>
-    <form action="/register" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+<div class="big_register">
+    <div class="register">
+        <h2>Регистрация</h2>
+            <form action="/register" method="POST">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
 
-        <button type="submit">Register</button>
-    </form
+                <button type="submit">Register</button>
+            </form>
+    </div>
+</div>
+
 {% endblock %}
